@@ -1,3 +1,11 @@
+Wed Jun 17 16:35:37 1998  Tom Yu  <tlyu@mit.edu>
+
+	* cnv_tkt_skey.c (krb524_convert_tkt_skey): Handle null address
+	fields; actually use saddr (the address from the UDP header) to
+	generate the ticket address rather than just checking against it.
+
+	* conv_creds.c (krb524_convert_creds_plain): Punt address checks.
+
 1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* k524init.c (main): POSIX states that getopt returns -1
